Use correct and IE-compatible word wrap properties everywhere
It's best to use both properties:
* overflow-wrap: break-word (successor of word-wrap)
* word-break: break-word (non-standard value supported by modern
  browsers)

--- a/rtg/src/components/GameCardGameInfo.scss
+++ b/rtg/src/components/GameCardGameInfo.scss
@@ -85,6 +85,7 @@
 
   &__city, &__userBet, &__points {
     text-align: center;
-    word-wrap: break-word;
+    word-break: break-word;
+    overflow-wrap: break-word;
   }
 }
