--- a/rtg/src/pages/Foyer.scss
+++ b/rtg/src/pages/Foyer.scss
@@ -36,7 +36,8 @@
 
   &__greeting {
     margin: 0;
-    word-wrap: break-word;
+    word-break: break-word;
+    overflow-wrap: break-word;
   }
 
   &__first-visit {
